# autotest

./: .gitignore  README.md  pyproject.toml
tests/: conftest.py  test_clicks.py
ui_click_tests/: __init__.py  html_samples.py  run_demo.py
