[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playwright-ui-click-tests"
version = "0.1.0"
description = "A minimal Python project demonstrating UI click automation tests using Playwright."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "cto.new", email = "devnull@example.com"}]

dependencies = [
  "playwright>=1.41",
]

[project.optional-dependencies]
test = [
  "pytest>=7.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["ui_click_tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
